# nonebot_plugin_auto_teenstudy

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish_teenstudy.yml
nonebot_plugin_auto_teenstudy/: __init__.py  dxx.py  dxx_hb.py  dxx_jx.py  dxx_zj.py  getData.py  get_src.py  handle_dxx_data.py  msg_pic.py
nonebot_plugin_auto_teenstudy/data/: dxx_answer.json  dxx_help.txt  dxx_push_list.json
nonebot_plugin_auto_teenstudy/resource/: 上海地区.md  安徽地区.md  江西地区.md  浙江地区.md  湖北地区.md
nonebot_plugin_auto_teenstudy/resource/area/: 吉林地区.md  四川地区.md  山东地区.md  河南地区.md  浙江地区.md  湖北地区.md  湖南地区.md  贵州地区.md  重庆地区.md
nonebot_plugin_auto_teenstudy/resource/crawl/: crawjx.py  crawlsc.py  crawlzj.py
