[tool.poetry]
name = "nonebot_plugin_auto_teenstudy"
version = "0.1.6"
description = "基于nonebot异步框架的青年大学自动提交插件"
authors = ["ZM25XC <2393899036@qq.com>"]
license="MIT"
readme="README.md"
homepage="https://github.com/ZM25XC/nonebot_plugin_auto_teenstudy"
[tool.poetry.dependencies]
python = "^3.6"
anti_useragent="~=1.0.7"
nonebot2 = ">=2.0.0b2"
nonebot-adapter-onebot = "^2.0.0b1"
beautifulsoup4="~=4.11.1"
bs4="~=0.0.1"
httpx="~=0.23.0"
lxml="~=4.9.0"
nonebot-adapter-onebot="==2.1.1"
nonebot-plugin-apscheduler="~=0.1.3"
numpy="~=1.23.1"
Pillow="~=9.1.1"
priority="~=2.0.0"
pyOpenSSL="~=22.0.0"
urllib3="~=1.26.9"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
