[tool.poetry]
name = "nonebot_plugin_auto_teenstudy"
version = "0.1.9"
description = "基于nonebot异步框架的青年大学自动提交插件"
authors = ["ZM25XC <xingling25@qq.com>"]
license="MIT"
readme="README.md"
homepage="https://github.com/ZM25XC/nonebot_plugin_auto_teenstudy"
packages = [
  { include = "nonebot_plugin_auto_teenstudy" },
]
[tool.poetry.dependencies]
python = "^3.8"
anti-useragent="^1.0.10"
beautifulsoup4="^4.11.2"
bs4="^0.0.1"
fastapi="^0.95.0,<1.0.0"
httpx="^0.24.0"
lxml="^4.9.2"
nonebot-adapter-onebot="^2.2.3"
nonebot-plugin-apscheduler="^0.3.0"
nonebot2="^2.0.0"
Pillow="^9.4.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
